--- a/Codewars/Codewars.csproj
+++ b/Codewars/Codewars.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<WarningsAsErrors />
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="StrictExamples\" />
+  </ItemGroup>
 
 </Project>
